tests/NormalTests/paczka1/small_fuzzy/71874670.err
Error in line 10: d1G8 S795 36,8
Error in line 7: petEXSLN4 A116 343,0
